Add drag/drop, and message to user

--- a/ScrabbleWeb/Client/wwwroot/index.html
+++ b/ScrabbleWeb/Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -23,6 +23,7 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="/javascript/dragdroptouch/DragDropTouch.js"></script>
 </body>
 
 </html>
