Config changes to enable deployment

--- a/ScrabbleWeb/Client/wwwroot/index.html
+++ b/ScrabbleWeb/Client/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="manifest.json" rel="manifest" />
+    <!--<link href="manifest.json" rel="manifest" />-->
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
 
@@ -23,7 +23,10 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="/javascript/dragdroptouch/DragDropTouch.js"></script>
+    <script src="javascript/dragdroptouch/DragDropTouch.js"></script>
+    <script>
+        window.addEventListener('touchmove', function () { });
+    </script>
 </body>
 
 </html>
