--- a/ScrabbleWeb/Client/wwwroot/index.html
+++ b/ScrabbleWeb/Client/wwwroot/index.html
@@ -24,6 +24,7 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <!--<script>navigator.serviceWorker.register('service-worker.js');</script>-->
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
