(Hopefully) ensure that after quitting Safari on iPhones, when you go back into it again the game immediately updates

--- a/ScrabbleWeb/Client/wwwroot/index.html
+++ b/ScrabbleWeb/Client/wwwroot/index.html
@@ -13,7 +13,7 @@
     <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
 </head>
 
-<body>
+<body onfocus="reconnectIphone()">
     <app>Loading...</app>
 
     <div id="blazor-error-ui">
